<resources>
    <string name="app_name">MesendgerApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_dafault_name">Имя пользователя</string>
    <string name="settings_defaul_status">В сети</string>
    <string name="settings_accaunt">Аккаунт</string>
    <string name="settings_default_number">+375331234567</string>
    <string name="settings_change_phone">Нажмите, чтобы изменить номер телефона</string>
    <string name="settings_default_login">Abramovich Vlad</string>
    <string name="settings_lable_login">Имя пользователя</string>
    <string name="settings_default_bio">О себе</string>
    <string name="settings_lable_bio">Напишите немного о себе</string>
    <string name="settings_menu_chage_name">Изменить имя</string>
    <string name="settings_menu_exit">Выход</string>
    <string name="registr_text_enter_code">Введите код</string>
    <string name="registr_text_we_send">Мы отправили SMS с кодом проверки на ваш телефон</string>
    <string name="registr_hint_default_code">_ _ _ _ _ _</string>
    <string name="registr_title_your_phone">Ваш телефон</string>
    <string name="registr_toast_enter_phone">Введите номер</string>
    <string name="registr_phon_number_hint">_ _ _ _ _ _ _</string>
    <string name="settings_hint_name">Имя</string>
    <string name="settings_hint_surname">Фамилия</string>
    <string name="settings_toast_input_name">Введитя имя</string>
    <string name="toast_data_update">Данные обновленн</string>
    <string name="hint_bio">Напишите о себе</string>
    <string name="fragment_title_contacts">Контакты</string>
    <string name="content_descripton_regist_image_view">123</string>
    <string name="flating_action_btn_content_descripton">Next</string>
    <string name="contact_item_name">Name contact</string>
    <string name="contact_item_status">В сети</string>
    <string name="toolbar_contact_name">Name contact</string>
    <string name="toolbar_status">В сети</string>
    <string name="message_item_default_text">Привет как дела</string>
    <string name="message_item_time">21:12</string>
    <string name="meessage_item_recived_message">Привет как дела</string>
    <string name="message_item_recived_time">21:12</string>
    <string name="chat_message_hint">Сообщение</string>
    <string name="btn_send">send</string>
    <string name="message_autohil">Message</string>
    <string name="toast_input_message">Введите сообщенеи</string>
    <string name="chats_text">Чаты</string>
    <string name="content_description_image_message">message_image</string>
    <string name="auto_fil_change_bio">settingchangebio</string>
    <string name="autofilsetiings_change_name">setiings_change_name</string>
    <string name="autofillsetiings_change_surname">setiings_change_surname</string>
    <string name="auto_fill_settings_et_change_user_name">settings_et_changeUser_name</string>
    <string name="chat_user_btn_play_decripton">chat_user_btn_play</string>
    <string name="chat_user_btn_stop_description">chat_user_btn_stop</string>
    <string name="chat_reciving_user_btn_play_description">chat_reciving_user_btn_play</string>
    <string name="chat_reciving_user_btn_stop_description">chat_reciving_user_btn_stop</string>
    <string name="btn_attach_image">btn_attach_image</string>
    <string name="btn_attach_file">btn_attach_file</string>
    <string name="clear_chat">Очистить чат</string>
    <string name="delet_chat">Удалить чат</string>
    <string name="chat_delet_toast">Чат удален</string>
    <string name="chat_clear_toast">Чат очищен</string>
    <string name="mai_list_name">full name contact</string>
    <string name="main_list_messages">last message</string>
    <string name="create_group">Создать группу</string>
    <string name="add_users_in_group">Добавить участника</string>
    <string name="create_group_photo">create_group_photo</string>
    <string name="create_group_btn_complet">create_group_btn_complet</string>
    <string name="add_contacts_btn">add_contacts_btn</string>
</resources>