<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.ChangeNameFragment">


    <EditText
        android:id="@+id/setiings_change_name"
        style="@style/editRegistrText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/settings_hint_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="@string/autofilsetiings_change_name" />

    <EditText
        android:id="@+id/setiings_change_surname"
        style="@style/editRegistrText"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/settings_hint_surname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setiings_change_name"
        android:autofillHints="@string/autofillsetiings_change_surname" />

</androidx.constraintlayout.widget.ConstraintLayout>