<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SetingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/setings_header_block"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/seting_user_photo"
            android:layout_width="@dimen/settings_user_photo_width"
            android:layout_height="@dimen/settings_user_photo_hight"
            android:layout_marginStart="@dimen/app_margin"
            android:src="@drawable/default_photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.511" />

        <TextView
            android:id="@+id/tv_seting_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/accent"
            tools:text="@string/settings_dafault_name"
            android:textSize="@dimen/normalText"
            android:layout_marginStart="@dimen/app_margin"
            android:layout_marginTop="@dimen/app_smal_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/seting_user_photo"
            app:layout_constraintTop_toTopOf="@+id/seting_user_photo" />

        <TextView
            android:id="@+id/tv_seting_user_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            tools:text="@string/settings_defaul_status"
            android:textSize="@dimen/smallText"
            android:layout_marginStart="@dimen/app_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/seting_user_photo"
            app:layout_constraintTop_toBottomOf="@+id/tv_seting_username" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_settings_accaunt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primary"
        android:text="@string/settings_accaunt"
        android:layout_marginStart="@dimen/app_margin"
        android:layout_marginTop="@dimen/vertical_large_margin"
        android:textSize="@dimen/smallText"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/setings_header_block"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_phone_number"
        app:layout_constraintTop_toBottomOf="@id/tv_settings_accaunt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/settingsButons">

        <TextView
            android:id="@+id/tv_settings_phone_number"
            tools:text="@string/settings_default_number"
            app:layout_constraintTop_toTopOf="@id/settings_btn_change_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/normalTetx" />

        <TextView
            android:id="@+id/tv_settings_lable_phone_number"
            android:text="@string/settings_change_phone"
            app:layout_constraintTop_toBottomOf="@id/tv_settings_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/smalText" />

        <View
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_settings_lable_phone_number"
            style="@style/separator" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_login"
        app:layout_constraintTop_toBottomOf="@id/settings_btn_change_phone_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/settingsButons">

        <TextView
            android:id="@+id/tv_settings_full_name"
            style="@style/normalTetx"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/settings_btn_change_login"
            tools:text="@string/settings_default_login" />

        <TextView
            android:id="@+id/tv_settings_lable_login"
            android:text="@string/settings_lable_login"
            app:layout_constraintTop_toBottomOf="@id/tv_settings_full_name"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/smalText" />

        <View
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_settings_lable_login"
            style="@style/separator" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_bio"
        app:layout_constraintTop_toBottomOf="@id/settings_btn_change_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/settingsButons">

        <TextView
            android:id="@+id/tv_settings_bio"
            tools:text="@string/settings_default_bio"
            app:layout_constraintTop_toTopOf="@id/settings_btn_change_bio"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/normalTetx" />

        <TextView
            android:id="@+id/tv_settings_lable_bio"
            android:text="@string/settings_lable_bio"
            app:layout_constraintTop_toBottomOf="@id/tv_settings_bio"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/smalText" />

        <View
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_settings_lable_bio"
            style="@style/separator" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_change_photo"
        android:layout_width="@dimen/settings_user_photo_width"
        android:layout_height="@dimen/settings_user_photo_hight"
        android:src="@drawable/ic_camera"
        android:layout_marginEnd="@dimen/app_margin"
        app:civ_border_color="@color/grey_400"
        app:civ_circle_background_color="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/setings_header_block"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setings_header_block" />



</androidx.constraintlayout.widget.ConstraintLayout>