<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.SingleChatFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_recycler_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/message_item"
        android:background="@color/blue_A100"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/chat_input_message"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <EditText
        android:id="@+id/chat_input_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/chat_message_hint"
        android:padding="@dimen/appPading"
        android:textColor="@color/black"
        android:textColorHint="@color/md_grey_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_send_message"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="@string/message_autohil"
        android:inputType="text" />

    <ImageView
        android:id="@+id/btn_send_message"
        android:src="@drawable/ic_send_message"
        app:layout_constraintTop_toTopOf="@+id/chat_input_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="50dp"
        android:padding="@dimen/appPading"
        android:layout_height="0dp"
        android:contentDescription="@string/btn_send" />


</androidx.constraintlayout.widget.ConstraintLayout>