<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/app_smal_margin">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/block_user_message_voice"
        android:layout_width="@dimen/chat_voice_width"
        android:layout_height="@dimen/chat_voice_hight"
        android:background="@drawable/bg_user_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/chat_user_btn_play"
            android:layout_width="@dimen/chat_btn_hight"
            android:layout_height="@dimen/chat_btn_hight"
            android:layout_margin="@dimen/app_smal_margin"
            android:src="@drawable/ic_play_green"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/chat_user_btn_play_decripton" />
        <ImageView
            android:id="@+id/chat_user_btn_stop"
            android:layout_width="@dimen/chat_btn_width"
            android:layout_height="@dimen/chat_btn_hight"
            android:layout_margin="@dimen/app_smal_margin"
            android:src="@drawable/ic_stop_green"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/chat_user_btn_stop_description" />


        <TextView
            android:id="@+id/chat_user_message_time_voice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/app_smal_margin"
            android:gravity="end"
            android:text="@string/message_item_time"
            android:textColor="@color/accent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/block_reciving_user_message_voice"
        android:layout_width="@dimen/chat_voice_width"
        android:layout_height="@dimen/chat_voice_hight"
        android:background="@drawable/bg_reciving_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/chat_reciving_user_btn_play"
            android:layout_width="@dimen/chat_btn_width"
            android:layout_height="@dimen/chat_btn_hight"
            android:layout_margin="@dimen/app_smal_margin"
            android:src="@drawable/ic_play_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/chat_reciving_user_btn_play_description" />
        <ImageView
            android:id="@+id/chat_reciving_user_btn_stop"
            android:layout_width="@dimen/chat_btn_width"
            android:layout_height="@dimen/chat_btn_width"
            android:layout_margin="@dimen/app_smal_margin"
            android:src="@drawable/ic_stop_blue"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/chat_reciving_user_btn_stop_description" />


        <TextView
            android:id="@+id/chat_reciving_user_message_time_voice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/app_smal_margin"
            android:gravity="end"
            android:text="@string/message_item_time"
            android:textColor="@color/grey_500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>