<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/create_group_photo"
        android:layout_width="@dimen/settings_user_photo_width"
        android:layout_height="@dimen/settings_user_photo_hight"
        android:layout_margin="@dimen/app_margin"
        android:contentDescription="@string/create_group_photo"
        android:src="@drawable/ic_change_photo_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_group_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:autofillHints="input_group_name"
        android:focusableInTouchMode="true"
        android:inputType="text"
        android:textColor="@color/grey_900"
        app:layout_constraintBottom_toBottomOf="@id/create_group_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/create_group_photo"
        app:layout_constraintTop_toTopOf="@id/create_group_photo" />

    <TextView
        android:id="@+id/create_group_counts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:text="@string/settings_accaunt"
        android:textColor="@color/primary"
        android:textSize="@dimen/smallText"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/create_group_photo" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/create_group_btn_complet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:contentDescription="@string/create_group_btn_complet"
        android:src="@drawable/ic_check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_group"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_group_counts"
        tools:listitem="@layout/main_list_item" />


</androidx.constraintlayout.widget.ConstraintLayout>